# openclaw-mind

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  temp_default.txt  tsconfig.json
.cargo/: config.toml
.codex-logs/: run-next-dev-3002.ps1  run-tauri-dev-3001.ps1  tauri.dev.3001.json
.kiro/specs/openclaw-deployer-ui-upgrade/: design.md  requirements.md  tasks.md
scripts/: build.ps1  rust-lld-link.cmd
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  channel.rs  clawhub.rs  config.rs  env_tool.rs  mind.rs  mod.rs  skill.rs  ssh.rs  system.rs  window.rs
src-tauri/src/models/: agent.rs  config.rs  connection.rs  message.rs  mod.rs  room.rs  skill.rs  task.rs
src-tauri/src/services/: agent_service.rs  ai_service.rs  clawhub_service.rs  config_service.rs  env_tool_service.rs  mind_service.rs  mod.rs  skill_service.rs  ssh_service.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Sidebar.tsx  TitleBar.tsx
src/components/agent/: AIConfigGenerator.tsx
src/components/common/: ConfirmDialog.tsx  FormSection.tsx
src/components/config/: CanvasSection.tsx  ChannelIngestTester.tsx  EnvVarsSection.tsx  FeishuSection.tsx  FieldGroup.tsx  FormSection.tsx  GatewayFields.tsx  ProviderCard.tsx  QqBridgeSection.tsx  (+4 more)
src/config/: mod.rs  persister.rs
src/lib/: tauri.ts
src/logging/: manager.rs  mod.rs
src/ssh/: client.rs  mod.rs
src/ui/: app.rs  mod.rs
(+16 files in other folders)
