[package]
name = "openclaw-desktop-deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
eframe = { version = "0.32", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0"
uuid = { version = "1.18", features = ["v4"] }
ssh2 = "0.9"

[dev-dependencies]
proptest = "1.5"
