[package]
name = "openclaw-mind"
version = "0.1.0"
edition = "2021"

[lib]
name = "openclaw_mind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw-mind"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
dirs = "6.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
urlencoding = "2.1"
zip = { version = "0.6", features = ["deflate"] }
shellexpand = "3.1"
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
